Sun Mar 26 13:26:24 MST 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/gui.h:
	* src/fe-gnome/about.c:
	  - Fix the about dialog to work with gtk+ changes related to #333360
	    (#336107)

Wed Mar 22 15:49:51 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	D data/xchat-gnome.desktop.in:
	A data/xchat-gnome.desktop.in.in:
	  - Add X-GNOME-Bugzilla-Version field to .desktop file.

Wed Mar 22 22:53:20 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* data/xchat-gnome.desktop.in:
	  - Apply Vincent Fretin's suggestions about the desktop file.
	    Remove the extension of the icon key. Add GNOME, GTK and IRCClient
	    as categories. Set general as default component for the bugzilla.

Tue Mar 21 22:51:04 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	  - Disable bans list in the channel popup menu because this is not yet
	    implemented.

Fri Mar 17 20:11:44 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome-ui.xml:
	  - Remove "clear" from various menus.  It's of extremely limited use,
	    easy to use accidentally, and still available with /clear

Fri Mar 17 16:23:51 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* data/preferences-dialog.glade:
	  - Get rid of extra, useless widgets

Fri Mar 17 15:46:24 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/preferences-dialog.h:
	  - Whitespace nitpickery
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* data/preferences-dialog.glade:
	  - Fiddle a bit with UI and whitespace

Fri Mar 17 22:41:09 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/text-entry.c:
	* src/fe-gnome/preferences-dialog.c:
	* src/fe-gnome/preferences-dialog.h:
	* src/fe-gnome/preferences-page-spellcheck.c:
	* src/fe-gnome/preferences-page-spellcheck.h:
	* src/fe-gnome/apps_xchat.schemas.in: